--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "mocha": "~1.20.1",
     "should": "~4.0.4",
     "sinon": "~1.10.2"
+  },
+  "scripts": {
+    "test": "node ./node_modules/mocha/bin/mocha -R spec -r should"
   }
 }
