--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "embark-schema",
+  "version": "1.0.0",
   "devDependencies": {
     "mocha": "~2.0.0",
     "should": "~4.0.4",
@@ -6,5 +8,24 @@
   },
   "scripts": {
     "test": "node ./node_modules/mocha/bin/mocha -R spec -r should"
-  }
+  },
+  "description": "*Condensed Syntax*",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "sinon": "^1.10.2",
+    "should": "^4.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mlrawlings/schema.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mlrawlings/schema/issues"
+  },
+  "homepage": "https://github.com/mlrawlings/schema"
 }
