--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "embark-schema",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "devDependencies": {
-    "mocha": "~2.0.0",
-    "should": "~4.0.4",
-    "sinon": "~1.10.2"
+    "mocha": "^2.2.1",
+    "should": "^4.6.5"
   },
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha -R spec -r should"
+    "test": "node ./node_modules/mocha/bin/mocha -w -R spec -r should"
   },
   "description": "*Condensed Syntax*",
   "main": "index.js",
@@ -15,9 +14,9 @@
     "test": "test"
   },
   "dependencies": {
+    "clone": "^1.0.1",
     "common-errors": "^0.4.18",
-    "should": "^4.0.4",
-    "sinon": "^1.10.2"
+    "filtr": "^0.3.0"
   },
   "repository": {
     "type": "git",
