--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "clone": "^1.0.1",
     "common-errors": "^0.4.18",
+    "custom-merge": "^1.0.0",
     "sift": "^1.1.0"
   },
   "repository": {
