--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "embark-schema",
+  "name": "schema-js",
   "version": "1.1.0",
   "devDependencies": {
     "mocha": "^2.2.1",
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "node ./node_modules/mocha/bin/mocha -w -R spec -r should"
   },
-  "description": "*Condensed Syntax*",
+  "description": "Simple but powerful library to validate any javascript value",
   "main": "index.js",
   "directories": {
     "test": "test"
